# QChat

./: .gitignore  README.md  deploy.sh  qchat.sql  视频通信实施方案.md
.workbuddy/: expert-history.json
.workbuddy/memory/: 2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-11.md  2026-04-12.md  2026-04-14.md  2026-04-15.md  MEMORY.md
ChatServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatServer.cpp  ChatServer.sln  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  Logger.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  const.h  data.h  message.proto
ChatServer2/: CServer.cpp  CSession.cpp  ChatGrpcClient.h  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  DistLock.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  const.h  data.h  message.proto
GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.sln  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  Logger.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.h  RPCConPool.h  RedisConPool.cpp  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusgRPCClient.cpp  StatusgRPCClient.h  VarifygRPCClient.cpp  VarifygRPCClient.h  const.h  message.proto
QChat/: QChat.pro  QChat.qtvscr  QChat.vcxproj  QChat.vcxproj.filters  YangRtcWrapper.cpp  YangRtcWrapper.h  adduseritem.cpp  adduseritem.h  adduseritem.ui  agentmemory.cpp  agentmemory.h  agenttools_impl.cpp  agenttools_impl.h  aipage.cpp  aipage.h  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendlist.cpp  applyfriendlist.h  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authenfriend.cpp  authenfriend.h  authenfriend.ui  background.md  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.cpp.autosave  chatpage.h  (+148 more)
QChat/resources/knowledge_base/: 01_overview.md  02_architecture.md  03_protocol.md  04_database.md  05_deployment.md  06_coding_standards.md
QChat/style/: stylesheet.qss
ResourceServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatServerGrpcClient.cpp  ChatServerGrpcClient.h  ConfigMgr.cpp  ConfigMgr.h  DownloadWorker.cpp  DownloadWorker.h  FileInfo.h  FileSystem.cpp  FileSystem.h  FileWorker.cpp  FileWorker.h  Logger.cpp  LogicSystem.cpp  LogicSystem.h  LogicWorker.cpp  LogicWorker.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  PropertySheet.props  RedisMgr.cpp  RedisMgr.h  ResourceServer.cpp  ResourceServer.sln  ResourceServer.vcxproj  ResourceServer.vcxproj.filters  Singleton.h  UserMgr.cpp  UserMgr.h  base64.cpp  (+4 more)
StatusServer/: AsioIOServicePool.cpp  CMakeLists.txt  ChatGrpcClient.cpp  ChatGrpcClient.h  ConfigMgr.cpp  Logger.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisConPool.cpp  RedisConPool.h  RedisMgr.cpp  RedisMgr.h  StatusServer.cpp  StatusServer.sln  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  const.h
TurnServer/: package.json  package_lock.json  server.js
VarifyServer/: config.js  config.json  const.js  email.js  package.json  proto.js  redis.js  server.js
metartc7/demo/metaplayer7/: metaplayer7.pro
metartc7/libmetartc7/project_win/: metartc7.vcxproj
metartc7/libmetartccore7/project_win/: metartccore7.vcxproj
